# ServerListManager_

./: .gitignore  CMakeLists.txt  README.md
include/: ServerManager.h
src/: ServerManager.cpp
tests/: test_ServerManager.cpp
